tests/baselines/reference/declFileExportImportChain2.errors.txt
declFileExportImportChain2_a.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
declFileExportImportChain2_a.ts(2,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== declFileExportImportChain2_d.ts (0 errors) ====
    import c = require("declFileExportImportChain2_c");
    export var x: c.b.m2.c1;
==== declFileExportImportChain2_a.ts (2 errors) ====
    module m1 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export module m2 {
                      ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export class c1 {
            }
        }
    }
    export = m1;
    
==== declFileExportImportChain2_b.ts (0 errors) ====
    import a = require("declFileExportImportChain2_a");
    export = a;
    
==== declFileExportImportChain2_c.ts (0 errors) ====
    export import b = require("declFileExportImportChain2_b");
    